--- a/index.html
+++ b/index.html
@@ -11,11 +11,132 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./develop/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
 
+  <header>
+    <!-- Header at the top -->
+    <div class="container col-12 h-25 p-1 jumbotron jumbotron-fluid">
+      <div class="container d-flex">
+        <h1 class="display-6 mx-auto">Weather Dashboard</h1>
+      </div>
+    </div>
+  </header>
+
   <body>
-      
+    <main class="container-fluid d-flex row gap-2">
+      <!-- div for the form  -->
+      <div class="col-12 col-md-2 mt-4">
+        <form>
+          <!-- City input Area-->
+          <div class="form-outline mb-4">
+            <label class="form-label mb-1 large-font-search"
+              >Search for a City:</label
+            >
+            <input
+              type="text"
+              id="input-city"
+              class="form-control"
+              placeholder="Seattle"
+              required
+            />
+          </div>
+
+          <!-- Search button -->
+          <button
+            type="button"
+            class="btn btn-primary col-12 bg-secondary"
+            id="searchBtn"
+          >
+            Search
+          </button>
+        </form>
+
+        <!-- previous search buttons -->
+        <div class="list-group"></div>
+      </div>
+
+      <!-- main page content containing weather data  -->
+      <div class="card col-9 border d-flex flex-column m-5 d-none">
+        <!-- This section is for the current weather data -->
+        <section class="container my-3 border col-11">
+          <strong
+            ><p>
+              <span id="City"></span>
+              <span id="timetext"></span
+              ><img class="currentWeather" src="" alt="Current Weather Icon" /></p
+          ></strong>
+          <p>Temp: <span id="temp"></span> °F</p>
+          <p>Wind: <span id="wind"></span> MPH</p>
+          <p>Humidity: <span id="humidity"></span> %</p>
+          <p>UV Index: <span id="uv-index"></span></p>
+        </section>
+
+        <!-- seciton for forcast data -->
+        <section class="container my-3">
+          <h3>5-Day Forcast</h3>
+          <div class="row justify-content-evenly">
+            <div class="col-12 col-md-6 col-lg-2 m-2 bg-secondary rounded day">
+              <h3 id="day-1">Title</h3>
+              <img
+                id="icon-1"
+                src="http://openweathermap.org/img/wn/10d@2x.png"
+                alt="weather status"
+              />
+              <p>Temp: <span id="temp-day-1"></span> °F</p>
+              <p>Wind: <span id="wind-day-1"></span> MPH</p>
+              <p>Humidity: <span id="hum-day-1"></span> %</p>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-2 m-2 bg-secondary rounded day">
+              <h3 id="day-2">Title</h3>
+              <img
+                id="icon-2"
+                src="http://openweathermap.org/img/wn/10d@2x.png"
+                alt="weather status"
+              />
+              <p>Temp: <span id="temp-day-2"></span> °F</p>
+              <p>Wind: <span id="wind-day-2"></span> MPH</p>
+              <p>Humidity: <span id="hum-day-2"></span> %</p>
+            </div>
+            <div class="col-12 col-md-6 col-lg-2 m-2 bg-secondary rounded day">
+              <h3 id="day-3">Title</h3>
+              <img
+                id="icon-3"
+                src="http://openweathermap.org/img/wn/10d@2x.png"
+                alt="weather status"
+              />
+              <p>Temp: <span id="temp-day-3"></span> °F</p>
+              <p>Wind: <span id="wind-day-3"></span> MPH</p>
+              <p>Humidity: <span id="hum-day-3"></span> %</p>
+            </div>
+            <div class="col-12 col-md-6 col-lg-2 m-2 bg-secondary rounded day">
+              <h3 id="day-4">Title</h3>
+              <img
+                id="icon-4"
+                src="http://openweathermap.org/img/wn/10d@2x.png"
+                alt="weather status"
+              />
+              <p>Temp: <span id="temp-day-4"></span> °F</p>
+              <p>Wind: <span id="wind-day-4"></span> MPH</p>
+              <p>Humidity: <span id="hum-day-4"></span> %</p>
+            </div>
+            <div class="col-12 col-md-6 col-lg-2 m-2 bg-secondary rounded day">
+              <h3 id="day-5">Title</h3>
+              <img
+                id="icon-5"
+                src="http://openweathermap.org/img/wn/10d@2x.png"
+                alt="weather status"
+              />
+              <p>Temp: <span id="temp-day-5"></span> °F</p>
+              <p>Wind: <span id="wind-day-5"></span> MPH</p>
+              <p>Humidity: <span id="hum-day-5"></span> %</p>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -31,19 +152,6 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <!-- Moment.JS is not from the HW template--retrieved from cdnjs.com/libraries/moment.js -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
-      integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script src="./develop/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
