Main container functioning, README completed with current status of project

--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Dashboard</title>
     <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous"/>
     <link rel="stylesheet" href="./styles.css" />
   </head>
 
@@ -24,118 +23,70 @@
   </header>
 
   <body>
-    <main class="container-fluid d-flex row gap-2">
-      <!-- div for the form  -->
-      <div class="col-12 col-md-2 mt-4">
-        <form>
-          <!-- City input Area-->
-          <div class="form-outline mb-4">
-            <label class="form-label mb-1 large-font-search"
-              >Search for a City:</label
-            >
-            <input
-              type="text"
-              id="input-city"
-              class="form-control"
-              placeholder="Seattle"
-              required
-            />
-          </div>
+    <aside class="float-left">
+      <label for="citySearch" class="form-label"><h2>Search for a City:<h2></label>
+      <input class="form-control" list="datalistOptions" id="citySearch" placeholder="Search a city">
+      <br>
+      <button type="button" class="btn btn-primary btn-lg btn-block" onclick="citySearch()" id="searchbox">Search</button>
+      <br>
+      <ul class = "previous-cities">
+      </ul>
+  </aside>
 
-          <!-- Search button -->
-          <button
-            type="button"
-            class="btn btn-primary col-12 bg-secondary"
-            id="searchBtn"
-          >
-            Search
-          </button>
-        </form>
-
-        <!-- previous search buttons -->
-        <div class="list-group"></div>
+  <main class="float-left">
+      <div class="container-fluid py-5" id= "current-city">
+          <h1 class="display-5 fw-bold" id="city"></h1>
+          <p class="col-md-8 fs-4" id="temp"></p>
+          <p class="col-md-8 fs-4" id="wind"></p>
+          <p class="col-md-8 fs-4" id="humidity"></p>
+          <p class="col-md-8 fs-4" id="uv"></p>
       </div>
 
-      <!-- main page content containing weather data  -->
-      <div class="card col-9 border d-flex flex-column m-5 d-none">
-        <!-- This section is for the current weather data -->
-        <section class="container my-3 border col-11">
-          <strong
-            ><p>
-              <span id="City"></span>
-              <span id="timetext"></span
-              ><img class="currentWeather" src="" alt="Current Weather Icon" /></p
-          ></strong>
-          <p>Temp: <span id="temp"></span> °F</p>
-          <p>Wind: <span id="wind"></span> MPH</p>
-          <p>Humidity: <span id="humidity"></span> %</p>
-          <p>UV Index: <span id="uv-index"></span></p>
-        </section>
+      <br>
+      <br>
 
-        <!-- seciton for forcast data -->
-        <section class="container my-3">
-          <h3>5-Day Forcast</h3>
-          <div class="row justify-content-evenly">
-            <div class="col-12 col-md-6 col-lg-2 m-2 bg-secondary rounded day">
-              <h3 id="day-1">Title</h3>
-              <img
-                id="icon-1"
-                src="http://openweathermap.org/img/wn/10d@2x.png"
-                alt="weather status"
-              />
-              <p>Temp: <span id="temp-day-1"></span> °F</p>
-              <p>Wind: <span id="wind-day-1"></span> MPH</p>
-              <p>Humidity: <span id="hum-day-1"></span> %</p>
-            </div>
-
-            <div class="col-12 col-md-6 col-lg-2 m-2 bg-secondary rounded day">
-              <h3 id="day-2">Title</h3>
-              <img
-                id="icon-2"
-                src="http://openweathermap.org/img/wn/10d@2x.png"
-                alt="weather status"
-              />
-              <p>Temp: <span id="temp-day-2"></span> °F</p>
-              <p>Wind: <span id="wind-day-2"></span> MPH</p>
-              <p>Humidity: <span id="hum-day-2"></span> %</p>
-            </div>
-            <div class="col-12 col-md-6 col-lg-2 m-2 bg-secondary rounded day">
-              <h3 id="day-3">Title</h3>
-              <img
-                id="icon-3"
-                src="http://openweathermap.org/img/wn/10d@2x.png"
-                alt="weather status"
-              />
-              <p>Temp: <span id="temp-day-3"></span> °F</p>
-              <p>Wind: <span id="wind-day-3"></span> MPH</p>
-              <p>Humidity: <span id="hum-day-3"></span> %</p>
-            </div>
-            <div class="col-12 col-md-6 col-lg-2 m-2 bg-secondary rounded day">
-              <h3 id="day-4">Title</h3>
-              <img
-                id="icon-4"
-                src="http://openweathermap.org/img/wn/10d@2x.png"
-                alt="weather status"
-              />
-              <p>Temp: <span id="temp-day-4"></span> °F</p>
-              <p>Wind: <span id="wind-day-4"></span> MPH</p>
-              <p>Humidity: <span id="hum-day-4"></span> %</p>
-            </div>
-            <div class="col-12 col-md-6 col-lg-2 m-2 bg-secondary rounded day">
-              <h3 id="day-5">Title</h3>
-              <img
-                id="icon-5"
-                src="http://openweathermap.org/img/wn/10d@2x.png"
-                alt="weather status"
-              />
-              <p>Temp: <span id="temp-day-5"></span> °F</p>
-              <p>Wind: <span id="wind-day-5"></span> MPH</p>
-              <p>Humidity: <span id="hum-day-5"></span> %</p>
-            </div>
+      <h2>5-Day Forecast:</h2>
+      
+      <div class="col">
+          <div class="card">
+              <div class="card-body">
+              This will be information for the 5-day Forecast
+              </div>
           </div>
-        </section>
       </div>
-    </main>
+
+      <div class="col">
+          <div class="card">
+              <div class="card-body">
+              This will be information for the 5-day Forecast
+              </div>
+          </div>
+      </div>
+
+      <div class="col">
+          <div class="card">
+              <div class="card-body">
+              This will be information for the 5-day Forecast
+              </div>
+          </div>
+      </div>
+
+      <div class="col">
+          <div class="card">
+              <div class="card-body">
+              This will be information for the 5-day Forecast
+              </div>
+          </div>
+      </div>
+
+      <div class="col">
+          <div class="card">
+              <div class="card-body">
+              This will be information for the 5-day Forecast
+              </div>
+          </div>
+      </div>
+  </main>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -152,6 +103,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
